wrap singular results in SingleResultDto
